<resources>

    <string name="app_name">formula 1 Game Recorder</string>
    <string name="button_addF1Game">Add Game</string>

    <string name="hint_gameTitle">Game Title</string>
    <string name="hint_gameDescription">Description</string>

    <string name="text_listPlayer">List of players-</string>
    <string name="hint_playerName">Name</string>
    <string name="hint_playerpoints">points</string>

    <string name="button_addPlayer">Add Player</string>
    <string name="menu_addplayer">Add Player</string>
    <string name="menu_cancelGame">Cancel</string>
    <string name="menu_player">Cancel</string>

    <string name="enter_game_title"> Please enter a game Title </string>
    <string name="enter_player_title"> Please enter a player Name </string>

    <string name="save_game"> Save game </string>
    <string name="save_player"> Save player </string>

    <string name="Add_button_default">add Button Pressed:</string>

    <string name="menu_deleteGame">Delete</string>
    <string name="menu_deletePlayer">Delete</string>

    <string name="button_addImage"> Add Image </string>
    <string name="select_player_image">Select player image</string>
    <string name="change_player_image">Change player image</string>

</resources>
