<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="org.wit.formula_1.activities.MainActivity">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="0dp"
            android:focusable="true"
            android:focusableInTouchMode="true">

        <android.support.design.widget.AppBarLayout
                android:id="@+id/appBarLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:fitsSystemWindows="true"
                app:elevation="0dip"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbarAddPlayer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:titleTextColor="@color/colorPrimary">

            </android.support.v7.widget.Toolbar>


        </android.support.design.widget.AppBarLayout>

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/appBarLayout"
                android:fillViewport="true">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <android.support.design.widget.TextInputEditText
                        android:id="@+id/playerName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:hint="@string/hint_playerName"
                        android:inputType="text"
                        android:maxLength="25"
                        android:maxLines="1"
                        android:padding="8dp"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="14sp"/>

                <android.support.design.widget.TextInputEditText
                        android:id="@+id/playerPoints"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:hint="@string/hint_playerpoints"
                        android:inputType="number"
                        android:maxLength="25"
                        android:maxLines="1"
                        android:padding="8dp"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="14sp"/>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <Button
                        android:id="@+id/chooseImage"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:background="@color/colorAccent"
                        android:paddingBottom="8dp"
                        android:paddingTop="8dp"
                        android:text="@string/button_addImage"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp"/>

                <ImageView
                        android:id="@+id/playerImage"
                        android:layout_width="150dp"
                        android:layout_height="100dp"
                        app:srcCompat="@mipmap/ic_launcher"/>
            </LinearLayout>

                <Button
                        android:id="@+id/btnAddPlayer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:background="@color/colorAccent"
                        android:paddingBottom="8dp"
                        android:paddingTop="8dp"
                        android:stateListAnimator="@null"
                        android:text="@string/button_addPlayer"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp"/>
            </LinearLayout>
        </ScrollView>

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>