<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="org.wit.formula_1.activities.MainActivity">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="16dp"
            android:focusable="true"
            android:focusableInTouchMode="true">

        <android.support.design.widget.AppBarLayout
                android:id="@+id/appBarLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:fitsSystemWindows="true"
                app:elevation="0dip"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbarAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:titleTextColor="@color/colorPrimary">

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.AppBarLayout>

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/appBarLayout"
                android:fillViewport="true">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <android.support.design.widget.TextInputEditText
                        android:id="@+id/gameTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:hint="@string/hint_gameTitle"
                        android:inputType="text"
                        android:maxLength="25"
                        android:maxLines="1"
                        android:padding="8dp"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="14sp"/>

                <android.support.design.widget.TextInputEditText
                        android:id="@+id/gameDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:hint="@string/hint_gameDescription"
                        android:inputType="text"
                        android:maxLength="25"
                        android:maxLines="1"
                        android:padding="8dp"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="14sp"/>


                <Button
                        android:id="@+id/btnAdd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:background="@color/colorAccent"
                        android:paddingBottom="8dp"
                        android:paddingTop="8dp"
                        android:stateListAnimator="@null"
                        android:text="@string/button_addF1Game"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp"/>

                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <android.support.design.widget.AppBarLayout
                            android:id="@+id/appBarLayoutFill"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:background="@color/colorPrimary"
                            android:fitsSystemWindows="true"
                            app:elevation="0dip"
                            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

                        <android.support.design.widget.AppBarLayout
                                android:id="@+id/appBarLayoutSideBar2"
                                android:layout_width="match_parent"
                                android:layout_height="20dp"
                                android:background="@color/colorAccent"
                                android:fitsSystemWindows="true"
                                app:elevation="0dip"
                                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
                        </android.support.design.widget.AppBarLayout>

                        <android.support.design.widget.AppBarLayout
                                android:id="@+id/appBarLayoutPLayer"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@color/colorAccent"
                                android:fitsSystemWindows="true"
                                app:elevation="0dip"
                                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

                            <TextView android:id="@+id/playerList"
                                      android:layout_width="wrap_content"
                                      android:layout_height="wrap_content"
                                      android:layout_margin="16dp"
                                      android:paddingBottom="8dp"
                                      android:paddingTop="8dp"
                                      android:textColor="@color/colorPrimary"
                                      android:text="@string/text_listPlayer"/>

                        </android.support.design.widget.AppBarLayout>

                    </android.support.design.widget.AppBarLayout>


                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>